fix mobile visibility for cravadas table

--- a/2025-26/styles.css
+++ b/2025-26/styles.css
@@ -2104,6 +2104,10 @@ option {
     display: none;
   }
 
+  .predictions-table-desktop.predictions-table-mobile-visible {
+    display: block;
+  }
+
   .predictions-mobile-board {
     display: grid;
   }
